add a subtle color

--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<html>
-<head>
-<title>Peng Fu</title>
-<meta http-equiv="REFRESH" content="0;url=http://www.sites.google.com/site/academiapengfu/"></HEAD>
-<BODY>
-Redirecting...
-</BODY>
-</HTML>
-
-<!-- <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN"> -->
+<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> -->
 <!-- <html> -->
 <!-- <head> -->
 <!-- <title>Peng Fu</title> -->
-<!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
-<!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
-<!-- </head> -->
-<!-- <body> -->
-<!-- <table border="0" width="100%" cellpadding="10"> -->
-<!-- <tr> -->
+<!-- <meta http-equiv="REFRESH" content="0;url=http://www.sites.google.com/site/academiapengfu/"></HEAD> -->
+<!-- <BODY> -->
+<!-- Redirecting... -->
+<!-- </BODY> -->
+
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
+<html>
+<head>
+<title>Peng Fu </title>
+<base href="http://www.divms.uiowa.edu/~pfu/">
+<link rev="made" href="mailto:pfu@divms.uiowa.edu">
+</head>
+<body style="background:#FBFEFF">
+<table border="0" width="100%" cellpadding="10">
+<tr>
+
+<td width="50%" valign="top">
+<h1>Peng Fu</h1>
+<h2>Status: A third year PhD student</h2>
+<h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2>
+
+<h2>Research Interests:</h2>
+<h4>I. Logics in General</h4>
+<h4>II. Formal Syntactical Systems Design</h4>
+<h4>III. Interactive Theorem Proving</h4>
+
+<p></p>
+<p></p>
+
+<h2>Publications:</h2>
+
+<h4>P001: A Framework for Internalizing Relations into
+Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p>
+
+
+<h2>Contact Information</h2>
+<p>Email:</p>
+<a href="mailto:peng-fu@uiowa.edu">peng-fu@uiowa.edu</a>
+
+<p>Mail Address:</p>
+<p>Department of Computer Science</p>
+<p>14 MacLean Hall</p>
+<p>Iowa City, IA 52242-1419</p>
 
 
 
@@ -25,46 +53,12 @@ Redirecting...
 
 
 
-<!-- <td width="50%" valign="top"> -->
-<!-- <h1>Peng Fu</h1> -->
-<!-- <h2>Status: A third year PhD student</h2>  -->
-<!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2>  -->
-
-<!-- <h2>Research Interests:</h2> -->
-<!-- <h4>I. Logics in General</h4> -->
-<!-- <h4>II. Formal Syntactical Systems Design</h4> -->
-<!-- <h4>III. Interactive Theorem Proving</h4> -->
-
-<!-- <p></p> -->
-<!-- <p></p> -->
-
-<!-- <h2>Publications:</h2> -->
-
-<!-- <h4>P001: A Framework for Internalizing Relations into -->
-<!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
-
-
-<!-- <h2>Contact Information</h2> -->
-<!-- <p>Email:</p> -->
-<!-- <a href="mailto:peng-fu@uiowa.edu">peng-fu@uiowa.edu</a> -->
-
-<!-- <p>Mail Address:</p> -->
-<!-- <p>Department of Computer Science</p> -->
-<!-- <p>14 MacLean Hall</p> -->
-<!-- <p>Iowa City, IA 52242-1419</p> -->
+</td>
 
 
 
+</tr>
+</table>
 
-
-
-
-<!-- </td> -->
-
-
-
-<!-- </tr> -->
-<!-- </table> -->
-
-<!-- </body> -->
-<!-- </html> -->
+</body>
+</html>
