choose the right color

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <base href="http://www.divms.uiowa.edu/~pfu/">
 <link rev="made" href="mailto:pfu@divms.uiowa.edu">
 </head>
-<body style="background:#FBFEFF">
+<body style="background:#f6f6ef">
 <table border="0" width="100%" cellpadding="10">
 <tr>
 
