done with mainpage formatting.

--- a/index.html
+++ b/index.html
@@ -15,49 +15,60 @@
 <base href="http://www.divms.uiowa.edu/~pfu/">
 <link rev="made" href="mailto:pfu@divms.uiowa.edu">
 </head>
-<body style="background:#f6f6ef">
-<table border="0" width="100%" cellpadding="10">
+<body style="background:#f6f6ef" link="009999">
+
+  <table border="0" width="90%" cellpadding="10">
 <tr>
 
-<td width="50%" valign="top">
-<h1>Peng Fu</h1>
-<h2>Status: A third year PhD student</h2>
-<h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2>
+  <td width="17%" valign="top" align="left">
+    <h1>Peng Fu</h1>
+    <p>Ph.D. Candidate</p>
+    <p>Computer Science <br>
+    The University of Iowa</p>
+    <p>Email:<br>
+    peng-fu at uiowa.edu </p>
+     <p>Mail Address: <br>
+    Department of Computer Science <br>
+    14 MacLean Hall <br>
+    Iowa City, IA 52242-1419</p>
 
-<h2>Research Interests:</h2>
-<h4>I. Logics in General</h4>
-<h4>II. Formal Syntactical Systems Design</h4>
-<h4>III. Interactive Theorem Proving</h4>
+  
+</td>
 
-<p></p>
-<p></p>
+<td width="83%" valign="middle">
 
-<h2>Publications:</h2>
+<!-- <h2>PhD Candidate</h2> -->
+<!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2> -->
 
-<h4>P001: A Framework for Internalizing Relations into
-Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p>
+<h2>Research</h2>
+<!-- <h4>I. Type Theory</h4> -->
+<!-- <h4>II. Lambda Calculus</h4> -->
+<!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
 
+<p>My research interests are in type theory a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language.</p>
+<h2>Recent Events </h2>
+<ul>
+  <li>I am going to DTP13 at September!</li>
 
-<h2>Contact Information</h2>
-<p>Email:</p>
-<a href="mailto:peng-fu@uiowa.edu">peng-fu@uiowa.edu</a>
-
-<p>Mail Address:</p>
-<p>Department of Computer Science</p>
-<p>14 MacLean Hall</p>
-<p>Iowa City, IA 52242-1419</p>
+</ul>
 
 
+   <h2> <a href="http://cv">Notes and Articles</a> </h2>
+    
+  <h2><a href="http://cv">Curriculum Vitae</a></h2>
+
+   <h2> <a href="http://cv">Publications</a></h2>
 
 
+<!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
 
 
 
 </td>
 
 
-
 </tr>
+
 </table>
 
 </body>
