add cv and some formmatting

--- a/index.html
+++ b/index.html
@@ -12,15 +12,16 @@
 <html>
 <head>
 <title>Peng Fu </title>
-<base href="http://www.divms.uiowa.edu/~pfu/">
-<link rev="made" href="mailto:pfu@divms.uiowa.edu">
+<!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
+<!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
 </head>
 <body style="background:#f6f6ef" link="009999">
 
-  <table border="0" width="90%" cellpadding="10">
+  <table  style="text-align: left; margin-left: auto;
+              margin-right: auto; width: 829px; height: 1570px;" border="0" width="90%" cellpadding="7" cellspacing="10">
 <tr>
 
-  <td width="17%" valign="top" align="left">
+  <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
     <p>Ph.D. Candidate</p>
     <p>Computer Science <br>
@@ -35,7 +36,7 @@
   
 </td>
 
-<td width="83%" valign="middle">
+<td width="70%" valign="top">
 
 <!-- <h2>PhD Candidate</h2> -->
 <!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2> -->
@@ -46,19 +47,21 @@
 <!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
 
 <p>My research interests are in type theory a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language.</p>
-<h2>Recent Events </h2>
+
+
+   <h2> <a href="./note.html">Notes and Articles</a> </h2>
+    
+  <h2><a href="./cv.html">Curriculum Vitae</a></h2>
+
+   <h2> <a href="./publications.html">Publications</a></h2>
+
+   <h2> <a href="./talk.html">Talks</a> </h2>
+
+   <h2>Recent Events </h2>
 <ul>
   <li>I am going to DTP13 at September!</li>
 
 </ul>
-
-
-   <h2> <a href="http://cv">Notes and Articles</a> </h2>
-    
-  <h2><a href="http://cv">Curriculum Vitae</a></h2>
-
-   <h2> <a href="http://cv">Publications</a></h2>
-
 
 <!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
 
