--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 <p>My research interests are in type theory a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language.</p>
 
 
-   <h2> <a href="./notes.html">Notes and Articles</a> </h2>
+   <h2> <a href="./src/notes/notes.html">Notes and Articles</a> </h2>
     
   <h2><a href="./cv.html">Curriculum Vitae [<a href="./src/cv/cv.pdf">PDF</a>]</a></h2>
 
@@ -59,6 +59,7 @@
 
    <h2>Recent Events </h2>
 <ul>
+  <li> This website is currently under construction.</li>
   <li>I am going to <a href="http://www.seas.upenn.edu/~sweirich/dtp13/">DTP13</a> at September!</li>
 
 </ul>
