modification of cv.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <!-- Redirecting... -->
 <!-- </BODY> -->
 
+<!-- <body style="text-align: left; margin-left: auto; -->
+<!--               margin-right: auto; width: 829px; height: 1570px; background:#f6f6ef"> -->
+
 
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
@@ -51,7 +54,7 @@
 
    <h2> <a href="./src/notes/notes.html">Notes and Articles</a> </h2>
     
-  <h2><a href="./cv.html">Curriculum Vitae [<a href="./src/cv/cv.pdf">PDF</a>]</a></h2>
+  <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2>
 
    <h2> <a href="./publications.html">Publications</a></h2>
 
