--- a/index.html
+++ b/index.html
@@ -56,15 +56,15 @@
     
   <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2>
 
-   <h2> <a href="./publications.html">Publications</a></h2>
+   <h2> <a href="./src/publications/publications.html">Publications</a></h2>
 
-   <h2> <a href="./talks.html">Talks</a> </h2>
+   <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
 
    <h2>Recent Events </h2>
 <ul>
-  <li> This website is currently under construction.</li>
-  <li>I am going to <a href="http://www.seas.upenn.edu/~sweirich/dtp13/">DTP13</a> at September!</li>
-
+  
+  <!-- <li>I am going to <a href="http://www.seas.upenn.edu/~sweirich/dtp13/">DTP13</a> at September!</li> -->
+  <li> Check out the Iowa <a href="http://homepage.cs.uiowa.edu/~astump/minisym-oct-2013.html">mini-symposium</a> on logic and functional programming.</li>
 </ul>
 
 <!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
