change the mainpage.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
     <p>Ph.D. Candidate</p>
+    <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a></p>
     <p>Computer Science <br>
     The University of Iowa</p>
     <p>Email:<br>
@@ -44,28 +45,28 @@
 <!-- <h2>PhD Candidate</h2> -->
 <!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2> -->
 
-<h2>Research</h2>
+<h2>Welcome!</h2>
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
 <!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
 
-<p>My research interests are in type theory a la Curry and lambda calculus, with applications to interactive theorem proving and functional programming language.</p>
+<p> Welcome to my temporary website. I hope you found materials on this website helpful for you. </p>
 
 
    <h2> <a href="./src/notes/notes.html">Notes and Articles</a> </h2>
     
-  <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2>
+  <!-- <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2> -->
 
    <h2> <a href="./src/publications/publications.html">Publications</a></h2>
 
    <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
 
-   <h2>Recent Events </h2>
-<ul>
+   <!-- <h2>Recent Events </h2> -->
+
   
   <!-- <li>I am going to <a href="http://www.seas.upenn.edu/~sweirich/dtp13/">DTP13</a> at September!</li> -->
-  <li> Check out the Iowa <a href="http://homepage.cs.uiowa.edu/~astump/minisym-oct-2013.html">mini-symposium</a> on logic and functional programming.</li>
-</ul>
+  <!-- <li> Check out the Iowa <a href="http://homepage.cs.uiowa.edu/~astump/minisym-oct-2013.html">mini-symposium</a> on logic and functional programming.</li> -->
+
 
 <!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
 
