--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -34,6 +34,9 @@
 <li><p>A002: Lambda Encoding, Types and Confluence. [<a href="../../document/notes/comp-exam.pdf">PDF</a>]</p>
 <p>Peng Fu. May 2013.</p>
 <p><strong>Remarks</strong>: This is my comprehensive exam paper.</p></li>
+<li><p>A003: Lambda Encoding with Comprehension. [<a href="../../document/notes/comprehension.pdf">PDF</a>]</p>
+<p>Peng Fu. Oct 2013.</p>
+<p><strong>Remarks</strong>: Last important Chapter of my dissertation, I would like it to be a single document.</p></li>
 </ul>
 </body>
 </html>
