delete the submission.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
     <p>Ph.D. Candidate</p>
-    <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a></p>
+    <!-- <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a></p> -->
     <p>Computer Science <br>
     The University of Iowa</p>
     <p>Email:<br>
@@ -45,19 +45,19 @@
 <!-- <h2>PhD Candidate</h2> -->
 <!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2> -->
 
-<h2>Welcome!</h2>
+<h2>Research Areas</h2>
+Lambda calculus, type theory a la Curry, interactive theorem proving, design and implementation of functional programming language. 
+
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
 <!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
-
-<p> Welcome to my temporary website. I hope you found materials on this website helpful for you. </p>
 
 
    <h2> <a href="./src/notes/notes.html">Notes and Articles</a> </h2>
     
   <!-- <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2> -->
 
-   <h2> <a href="./src/publications/publications.html">Publications</a></h2>
+   <!-- <h2> <a href="./src/publications/publications.html">Publications</a></h2> -->
 
    <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
 
