--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -29,6 +29,7 @@
 </ul>
 <h1 class="unnumbered">Articles</h1>
 <ul>
+<li><p>A000: A Framework for Internalizing Relations into Type Theory”. Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT’11: International Workshop on Proof-Search in Axiomatic Theories and Type Theories (2011). [<a href="../../document/papers/psattt-paper.pdf">pdf</a>]</p></li>
 <li><p>A001: A Rewriting Formulation of Curry Style System F. [<a href="../../document/notes/rewrite-f.pdf">PDF</a>]</p>
 <p>Peng Fu, Aaron Stump. Jan 2012.</p></li>
 <li><p>A002: Lambda Encoding, Types and Confluence. [<a href="../../document/notes/comp-exam.pdf">PDF</a>]</p>
@@ -37,6 +38,8 @@
 <li><p>A003: Lambda Encoding with Comprehension. [<a href="../../document/notes/comprehension.pdf">PDF</a>]</p>
 <p>Peng Fu. Oct 2013.</p>
 <p><strong>Remarks</strong>: Last important Chapter of my dissertation, I would like it to be a single document.</p></li>
+<li><p>A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/scott-dep.pdf">pdf</a>]</p></li>
+<li><p>A005: Church Encoding with Dependent Type. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/church-dep.pdf">pdf</a>]</p></li>
 </ul>
 </body>
 </html>
