fix index and cv

--- a/index.html
+++ b/index.html
@@ -1,16 +1,3 @@
-<!-- <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"> -->
-<!-- <html> -->
-<!-- <head> -->
-<!-- <title>Peng Fu</title> -->
-<!-- <meta http-equiv="REFRESH" content="0;url=http://www.sites.google.com/site/academiapengfu/"></HEAD> -->
-<!-- <BODY> -->
-<!-- Redirecting... -->
-<!-- </BODY> -->
-
-<!-- <body style="text-align: left; margin-left: auto; -->
-<!--               margin-right: auto; width: 829px; height: 1570px; background:#f6f6ef"> -->
-
-
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
@@ -27,26 +14,24 @@
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
     <p>Ph.D. Candidate</p>
-    <!-- <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a></p> -->
+    <p><a href="./src/cv/cv.html">Curriculum Vitae </a> [<a href="./src/cv/cv.pdf">pdf</a>] </p>
     <p>Computer Science <br>
-    The University of Iowa</p>
+      The University of Iowa</p>
+    <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p>
     <p>Email:<br>
     peng-fu at uiowa.edu </p>
      <p>Mail Address: <br>
     Department of Computer Science <br>
     14 MacLean Hall <br>
     Iowa City, IA 52242-1419</p>
-
-  
 </td>
 
 <td width="70%" valign="top">
 
 <!-- <h2>PhD Candidate</h2> -->
-<!-- <h2>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Prof. Aaron Stump</a></h2> -->
 
 <h2>Research Areas</h2>
-Lambda calculus, type theory a la Curry, interactive theorem proving, design and implementation of functional programming language. 
+Lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language. 
 
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
@@ -57,7 +42,7 @@ Lambda calculus, type theory a la Curry, interactive theorem proving, design and
     
   <!-- <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2> -->
 
-   <!-- <h2> <a href="./src/publications/publications.html">Publications</a></h2> -->
+   <h2> <a href="./src/publications/publications.html">Publications</a></h2>
 
    <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
 
