--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
     <p>Ph.D. Candidate</p>
-    <p><a href="./src/cv/cv.html">Curriculum Vitae </a> [<a href="./src/cv/cv.pdf">pdf</a>] </p>
+    <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p>
     <p>Computer Science <br>
       The University of Iowa</p>
     <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p>
