--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
 <!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
 </head>
-<body style="background:#f6f6ef" link="009999">
+<body link="009999">
 
   <table  style="text-align: left; margin-left: auto;
               margin-right: auto; width: 829px; height: 1570px;" border="0" width="90%" cellpadding="7" cellspacing="10">
