update current info

--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
 
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
-    <p>Ph.D. Candidate</p>
+    <p>Postdoctorial Research Assistant</p>
     <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p>
     <p>Computer Science <br>
-      The University of Iowa</p>
+      The University of Dundee</p>
     <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p>
     <p>Email:<br>
     peng-fu at uiowa.edu </p>
