--- a/index.html
+++ b/index.html
@@ -17,21 +17,21 @@
     <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p>
     <p>Computer Science <br>
       The University of Dundee</p>
-    <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p>
+    <!-- <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p> -->
     <p>Email:<br>
-    peng-fu at uiowa.edu </p>
+    pfu at dundee.ac.uk </p>
      <p>Mail Address: <br>
-    Department of Computer Science <br>
-    14 MacLean Hall <br>
-    Iowa City, IA 52242-1419</p>
+    School of Computing <br>
+    Queen Mother's Building <br>
+    Dundee, Scotland</p>
 </td>
 
 <td width="70%" valign="top">
 
 <!-- <h2>PhD Candidate</h2> -->
 
-<h2>Research Areas</h2>
-Lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language. 
+<h2>Welcome!</h2>
+I am currently working on applying CoAlgebraic Logic Programming to Type Inference in functional programming languages with <a href="http://staff.computing.dundee.ac.uk/katya/">Ekaterina Komendantskaya</a>. My research interests also include lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language. 
 
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
