--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -12,6 +12,8 @@
 <p><strong>Remarks</strong>: This is the revised version to deal with the confluence problem arise in N007, the proof is inspired by the interpretation method.</p></li>
 <li><p>N009: Type Preservation for Curry Style F-omega, July 2013. [<a href="../../document/notes/fomega-presv.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega</p></li>
+<li><p>N010: Type Class and Logic Programming with Term Matching, Nov 2014. [<a href="../../document/notes/tm.pdf">pdf</a>]</p>
+<p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
 </ul>
 <h1 id="articles" class="unnumbered">Articles</h1>
 <ul>
