--- a/src/publications/publications.html
+++ b/src/publications/publications.html
@@ -1,6 +1,6 @@
 <h1 id="publications" class="unnumbered">Publications</h1>
 <ul>
-<li><p><em>A Type-Theoretic Approach to Structural Resolution</em>. Peng Fu, Ekaterina Komendantskaya. Presentation LOPSTR 2015. [<a href="../../document/papers/tm-lp.pdf">Extended Version</a>]</p></li>
+<li><p><em>A Type-Theoretic Approach to Resolution</em>. Peng Fu, Ekaterina Komendantskaya. Submitted to LOPSTR 2015. [<a href="../../document/papers/tm-lp.pdf">Extended Version</a>]</p></li>
 <li><p><em>Lambda encodings in type theory</em>. Dissertation, May 2014. [<a href="../../document/papers/dissertation.pdf">pdf</a>]</p></li>
 <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>. Peng Fu, Aaron Stump. RTA-TLCA 2014. [<a href="../../document/papers/rta-tlca.pdf">Extended Version</a>]</p></li>
 <li><p><em>A Framework for Internalizing Relations into Type Theory</em>. Peng Fu, Aaron Stump, Jeff Vaughan. Accepted. PSATTT-2011: International Workshop on Proof-Search in Axiomatic Theories and Type Theories 2011. [<a href="../../document/papers/psattt-paper.pdf">pdf</a>]</p></li>
