--- a/src/publications/publications.html
+++ b/src/publications/publications.html
@@ -1,5 +1,6 @@
 <h1 id="publications" class="unnumbered">Publications</h1>
 <ul>
+<li><p><em>Proof Relevant Corecursive Resolution</em>. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. [Extended Version]</p></li>
 <li><p><em>A Type-Theoretic Approach to Resolution</em>. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015. [<a href="../../document/papers/tm-lp.pdf">Extended Version</a>]</p></li>
 <li><p><em>Lambda encodings in type theory</em>. Dissertation, May 2014. [<a href="../../document/papers/dissertation.pdf">pdf</a>]</p></li>
 <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>. Peng Fu, Aaron Stump. Joint Conference on Rewriting Techniques, Typed Lambda Calculi and Applications. RTA-TLCA 2014. [<a href="../../document/papers/rta-tlca.pdf">Extended Version</a>]</p></li>
