--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@ I am currently working on applying CoAlgebraic Logic Programming to Type Inferen
    <h2> <a href="./src/publications/publications.html">Publications</a></h2>
 
    <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
+   <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2>
 
    <!-- <h2>Recent Events </h2> -->
 
