change of email address

--- a/index.html
+++ b/index.html
@@ -16,14 +16,10 @@
     <p>Postdoctorial Research Assistant</p>
     <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p>
     <p>Computer Science <br>
-      The University of Dundee</p>
+      Heriot-Watt University</p>
     <!-- <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p> -->
     <p>Email:<br>
-    pfu at dundee.ac.uk </p>
-     <p>Mail Address: <br>
-    School of Computing <br>
-    Queen Mother's Building <br>
-    Dundee, Scotland</p>
+    p.fu at hw.ac.uk </p>
 </td>
 
 <td width="70%" valign="top">
