--- a/src/talks/talks.html
+++ b/src/talks/talks.html
@@ -1,5 +1,6 @@
 <h1 id="talks" class="unnumbered">Talks</h1>
 <ul>
+<li><p><em>Proof Relevant Corecursive Resolution</em>. June 22, 2016, The Scottish Programming Languages Seminar, Heriot-Watt University, Edinburgh, UK. [<a href="../../document/talks/spls-2016.pdf">Slides</a>]</p></li>
 <li><p><em>A Type-Theoretic Approach to Structural Resolution</em>. July 13, 2015, LOPSTR, Siena, Italy. [<a href="../../document/talks/lopstr-2015.pdf">Slides</a>]</p></li>
 <li><p><em>Self Types for Dependently Typed Lambda Encodings</em>. July 15, 2014, RTA-TLCA, Vienna, Austria. [<a href="../../document/talks/rta-tlca-14.pdf">Slides</a>]</p></li>
 <li><p><em>Lambda Encodings in Type Theory</em>. May 2, 2014, Dissertation Defense, Iowa City, Iowa. [<a href="../../document/talks/thesis-talk.pdf">Slides</a>]</p></li>
