--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
 
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
-    <p>Postdoctorial Research Assistant</p>
-    <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p>
+    <p>Postdoctoral Researcher</p>
+    <!-- <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p> -->
     <p>Computer Science <br>
-      Heriot-Watt University</p>
+      Heriot-Watt University<br>
+      Edinburgh, UK
+    </p>
     <!-- <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p> -->
     <p>Email:<br>
-    p.fu at hw.ac.uk </p>
+    peng-fu at uiowa.edu </p>
 </td>
 
 <td width="70%" valign="top">
@@ -27,21 +29,30 @@
 <!-- <h2>PhD Candidate</h2> -->
 
 <h2>Welcome!</h2>
-I am currently working on applying CoAlgebraic Logic Programming to Type Inference in functional programming languages with <a href="http://staff.computing.dundee.ac.uk/katya/">Ekaterina Komendantskaya</a>. My research interests also include lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language. 
+My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
+
+<h2>Education</h2>
+<li> Ph.D. in Computer Science, the University of Iowa, 2014  </li>
+<li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li>
 
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
 <!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
 
 
-   <h2> <a href="./src/notes/notes.html">Notes and Articles</a> </h2>
-    
-  <!-- <h2><a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]</h2> -->
+<h2>Quick Links</h2>
+<li> <a href="./src/publications/publications.html">Publications</a> </li>
+<li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
+<li> <a href="./src/talks/talks.html">Selected Talks</a> </li>
+<li> <a href="./src/talks/talks.html">Research Statement</a> </li>
+<li> <a href="./src/talks/talks.html">Teaching Statement</a> </li>
 
-   <h2> <a href="./src/publications/publications.html">Publications</a></h2>
+<li> <a href="./src/notes/notes.html">Misc</a> </li>
 
-   <h2> <a href="./src/talks/talks.html">Selected Talks</a> </h2>
-   <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2>
+<h2>Recent Events</h2>
+<li> I am currently on the job market. </li>
+
+   <!-- <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2> -->
 
    <!-- <h2>Recent Events </h2> -->
 
@@ -58,7 +69,6 @@ I am currently working on applying CoAlgebraic Logic Programming to Type Inferen
 
 
 </tr>
-
 </table>
 
 </body>
