--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
   <td width="25%" valign="top" align="left">
     <h1>Peng Fu</h1>
-    <p>Postdoctoral Researcher</p>
+    <!-- <p>Ph.D. </p> -->
     <!-- <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p> -->
-    <p>Computer Science <br>
-      Heriot-Watt University<br>
-      Edinburgh, UK
+    <!-- <p>Computer Science <br> -->
+      <br>
+      
     </p>
     <!-- <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p> -->
     <p>Email:<br>
