--- a/index.html
+++ b/index.html
@@ -7,28 +7,7 @@
 </head>
 <body link="009999">
 
-  <table  style="text-align: left; margin-left: auto;
-              margin-right: auto; width: 829px; height: 1570px;" border="0" width="90%" cellpadding="7" cellspacing="10">
-<tr>
-
-  <td width="25%" valign="top" align="left">
-    <h1>Peng Fu</h1>
-    <!-- <p>Ph.D. </p> -->
-    <!-- <p><a href="./src/cv/cv.pdf">Curriculum Vitae </a>  </p> -->
-    <!-- <p>Computer Science <br> -->
-      <br>
-      
-    </p>
-    <!-- <p>Advisor: <a href="http://www.cs.uiowa.edu/~astump/">Aaron Stump</a></p> -->
-    <p>Email:<br>
-    peng-fu at uiowa.edu </p>
-</td>
-
-<td width="70%" valign="top">
-
-<!-- <h2>PhD Candidate</h2> -->
-
-<h2>Welcome?!</h2>
+<h2>Peng Fu</h2>
 My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
 
 <h2>Education</h2>
@@ -51,6 +30,7 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 
 <h2>Recent Events</h2>
 <li> I am currently on the job market. </li>
+<li> This website is currently under construction. </li>
 
    <!-- <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2> -->
 
@@ -65,11 +45,9 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 
 
 
-</td>
 
 
-</tr>
-</table>
+
 
 </body>
 </html>
