--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
 My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
 
 <h2>Education</h2>
-<li> Ph.D. in Computer Science, the University of Iowa, 2014  </li>
-<li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li>
+Ph.D. in Computer Science, the University of Iowa, 2014
+<!-- <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> -->
 
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
@@ -20,17 +20,17 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 
 
 <h2>Quick Links</h2>
-<li> <a href="./src/publications/publications.html">Publications</a> </li>
+<li> <a href="./src/publications/publications.html">Selected Publications</a> </li>
 <li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
 <li> <a href="./src/talks/talks.html">Selected Talks</a> </li>
-<li> <a href="./src/talks/talks.html">Research Statement</a> </li>
-<li> <a href="./src/talks/talks.html">Teaching Statement</a> </li>
-
+<!-- <li> <a href="./src/talks/talks.html">Research Statement</a> </li> -->
+<!-- <li> <a href="./src/talks/talks.html">Teaching Statement</a> </li> -->
 <li> <a href="./src/notes/notes.html">Misc</a> </li>
-
+<h2>Contact</h2>
+Email: peng-fu at uiowa.edu
 <h2>Recent Events</h2>
 <li> I am currently on the job market. </li>
-<li> This website is currently under construction. </li>
+<!-- <li> This website is currently under construction. </li> -->
 
    <!-- <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2> -->
 
