--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -25,7 +25,7 @@
 <li><p>A003: Lambda Encoding with Comprehension. [<a href="../../document/notes/comprehension.pdf">pdf</a>]</p>
 <p>Peng Fu. Oct 2013.</p>
 <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
-<li><p>A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/scott-dep.pdf">pdf</a>]</p>
-<h1>Academic Blog</h1>
-<p>I try to maintain an academic blog here: <a href="https://steprow.wordpress.com/">https://steprow.wordpress.com/</a>.</p></li>
+<li><p>A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/scott-dep.pdf">pdf</a>]</p></li>
 </ul>
+<h1 id="academic-blog" class="unnumbered">Academic Blog</h1>
+<p>I try to maintain an academic blog here: <a href="https://steprow.wordpress.com/">https://steprow.wordpress.com/</a>.</p>
