--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 
 <h2>Education</h2>
 Ph.D. in Computer Science, the University of Iowa, 2014
-<!-- <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> -->
+<li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
 
 <!-- <h4>I. Type Theory</h4> -->
 <!-- <h4>II. Lambda Calculus</h4> -->
