--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
 
 <h2>Education</h2>
-Ph.D. in Computer Science, the University of Iowa, 2014
+<li> Ph.D. in Computer Science, the University of Iowa, 2014 </li> 
 <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
 
 <!-- <h4>I. Type Theory</h4> -->
