--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
-<title>Peng Fu </title>
+<title>Frank(Peng) Fu </title>
 <!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
 <!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
 </head>
