--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 3.2//EN">
 <html>
 <head>
-<title>Frank(Peng) Fu </title>
+<title>Frank Fu </title>
 <!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
 <!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
 </head>
 <body link="009999">
 
-<h2>Peng Fu</h2>
+<h2>Frank(Peng) Fu</h2>
 My research interests are lambda calculus, type theory, interactive theorem proving, design and implementation of functional programming language
 
 <h2>Education</h2>
