add journal pub

--- a/src/publications/publications.html
+++ b/src/publications/publications.html
@@ -1,6 +1,7 @@
 <h1 id="selected-publications" class="unnumbered">Selected Publications</h1>
 <ul>
-<li><p><em>Efficiency of Lambda-Encodings in Total Type Theory</em>. Aaron Stump, Peng Fu. Accepted in final form January 23, 2016 by the Journal of Functional Programming. To appear. [<a href="../../document/papers/efficiency.pdf">pdf</a>]</p></li>
+<li><p><em>Operational semantics of resolution and productivity in Horn clause logic</em>. Peng Fu, Ekaterina Komendantskaya. Formal Aspects of Computing, extended version of LOPSTR 2015, to appear. [<a href="../../document/papers/fac-journal.pdf">pdf</a>]</p></li>
+<li><p><em>Efficiency of Lambda-Encodings in Total Type Theory</em>. Aaron Stump, Peng Fu. Journal of Functional Programming, 2016. [<a href="../../document/papers/efficiency.pdf">pdf</a>]</p></li>
 <li><p><em>Proof Relevant Corecursive Resolution</em>. Peng Fu, Ekaterina Komendantskaya, Tom Schrijvers, Andrew Pond. International Symposium on Functional and Logic Programming, FLOPS 2016. [<a href="../../document/papers/corec.pdf">Extended Version</a>]</p></li>
 <li><p><em>A Type-Theoretic Approach to Resolution</em>. Peng Fu, Ekaterina Komendantskaya. International Symposium on Logic-Based Program Synthesis and Transformation, LOPSTR 2015. [<a href="../../document/papers/tm-lp.pdf">Extended Version</a>]</p></li>
 <li><p><em>Lambda encodings in type theory</em>. Dissertation, May 2014. [<a href="../../document/papers/dissertation.pdf">pdf</a>]</p></li>
