--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <li> <a href="./src/publications/publications.html">Selected Publications</a> </li>
 <li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
 <li> <a href="./src/talks/talks.html">Selected Talks</a> </li>
-<!-- <li> <a href="./src/talks/talks.html">Research Statement</a> </li> -->
+<li> <a href="./src/job-app/job.html">Job application materials</a> </li>
 <!-- <li> <a href="./src/talks/talks.html">Teaching Statement</a> </li> -->
 <li> <a href="./src/notes/notes.html">Misc</a> </li>
 <h2>Contact</h2>
