--- a/src/job-app/job.html
+++ b/src/job-app/job.html
@@ -7,11 +7,11 @@
 </head>
 <body link="009999">
 
-<h2>Quick Links</h2>
-<li> <a href="./src/job-app/frank-fu-research.pdf">Research statement</a> </li>
-<li> <a href="./src/cv/cv.pdf">Curriculum Vitae</a> </li>
-<li> <a href="./src/job-app/frank-fu-teaching.pdf">Teaching statement</a> </li>
-<li> <a href="./src/job-app/frank-fu-cover.pdf">Cover letter</a> </li>
+<h2>Job application materials</h2>
+<li> <a href="./frank-fu-research.pdf">Research statement</a> </li>
+<li> <a href="./cv.pdf">Curriculum Vitae</a> </li>
+<li> <a href="./frank-fu-teaching.pdf">Teaching statement</a> </li>
+<li> <a href="./frank-fu-cover.pdf">Cover letter</a> </li>
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 </body>
