--- a/index.html
+++ b/index.html
@@ -14,11 +14,6 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <li> Ph.D. in Computer Science, the University of Iowa, 2014 </li> 
 <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
 
-<!-- <h4>I. Type Theory</h4> -->
-<!-- <h4>II. Lambda Calculus</h4> -->
-<!-- <h4>III. Interactive Theorem Proving, Program Verifications </h4> -->
-
-
 <h2>Quick Links</h2>
 <li> <a href="./src/publications/publications.html">Selected publications</a> </li>
 <li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
@@ -29,23 +24,8 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 <h2>Recent Events</h2>
+<li> My new draft "Representing Nonterminating Reductions in F_{\mu}^2" is available <a href="./src/cv/nonterm.pdf">here</a>. </li>
 <li> I am currently on the job market. </li>
-<!-- <li> This website is currently under construction. </li> -->
-
-   <!-- <h2> <a href="https://steprow.wordpress.com/"> Blog </a> </h2> -->
-
-   <!-- <h2>Recent Events </h2> -->
-
-  
-  <!-- <li>I am going to <a href="http://www.seas.upenn.edu/~sweirich/dtp13/">DTP13</a> at September!</li> -->
-  <!-- <li> Check out the Iowa <a href="http://homepage.cs.uiowa.edu/~astump/minisym-oct-2013.html">mini-symposium</a> on logic and functional programming.</li> -->
-
-
-<!-- Type Theory.  [<a href="http://www.cs.uiowa.edu/~pfu/document/psattt-paper.pdf">PDF</a>]</h4> <p>Peng Fu, Aaron Stump, Jeff Vaughan. PSATTT 2011. </p> -->
-
-
-
-
 
 
 
