--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 <h2>Recent Events</h2>
-<li> My new draft "Representing Nonterminating Reductions in F_{\mu}^2" is available <a href="./src/cv/nonterm.pdf">here</a>. </li>
+<li> My new draft "Representing Nonterminating Reductions in F_{\mu}^2" is available <a href="./document/papers/nonterm.pdf">here</a>. </li>
 <li> I am currently on the job market. </li>
 
 
