--- a/index.html
+++ b/index.html
@@ -4,6 +4,16 @@
 <title>Frank Fu </title>
 <!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
 <!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-36515113-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </head>
 <body link="009999">
 
@@ -30,4 +40,14 @@ Email: peng-fu at uiowa.edu
 
 
 </body>
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-36515113-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
 </html>
