--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -1,3 +1,20 @@
+<head>
+<title>Misc </title>
+<!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
+<!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-36515113-2', 'auto');
+  ga('send', 'pageview');
+
+</script>
+
+</head>
+
 <h1 id="notes" class="unnumbered">Notes</h1>
 <ul>
 <li><p>N001: Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. [<a href="../../document/notes/reducibility-stlc.pdf">pdf</a>]</p></li>
