--- a/src/talks/talks.html
+++ b/src/talks/talks.html
@@ -1,3 +1,4 @@
+<head>
 <title>Talks </title>
 <!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
 <!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
