--- a/index.html
+++ b/index.html
@@ -28,14 +28,15 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <li> <a href="./src/publications/publications.html">Selected publications</a> </li>
 <li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
 <li> <a href="./src/talks/talks.html">Selected talks</a> </li>
-<li> <a href="./src/job-app/job.html">Job application materials</a> </li>
-<!-- <li> <a href="./src/talks/talks.html">Teaching Statement</a> </li> -->
 <li> <a href="./src/notes/notes.html">Misc</a> </li>
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 <h2>Recent Events</h2>
+<li> I will be working with <a href="www.mathstat.dal.ca/~selinger/">Peter Selinger</a> as a postdoc on the project "Trusted
+Quantum Software via a Formally Verified Functional Quantum
+Programming Language". </li>
 <li> My new draft "Representing Nonterminating Reductions in F_{\mu}^2" is available <a href="./document/papers/nonterm.pdf">here</a>. </li>
-<li> I am currently on the job market. </li>
+
 
 
 
