--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 <h2>Recent Events</h2>
+<li> Draft <a href="./document/papers/nonterm.pdf"> "Representing Nonterminating Reductions in F_{\mu}^2" </a> is submitted. </li>
+
 <li> I will be working with <a href="www.mathstat.dal.ca/~selinger/">Peter Selinger</a> as a postdoc on the project "Trusted
 Quantum Software via a Formally Verified Functional Quantum
 Programming Language". </li>
-<li> My new draft "Representing Nonterminating Reductions in F_{\mu}^2" is available <a href="./document/papers/nonterm.pdf">here</a>. </li>
-
-
-
 
 </body>
 <script>
