add new notes and articles

--- a/index.html
+++ b/index.html
@@ -31,12 +31,10 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <li> <a href="./src/notes/notes.html">Misc</a> </li>
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
-<h2>Recent Events</h2>
-<li> Draft <a href="./document/papers/nonterm.pdf"> "Representing Nonterminating Reductions in F_{\mu}^2" </a> is submitted. </li>
 
-<li> I will be working with <a href="www.mathstat.dal.ca/~selinger/">Peter Selinger</a> as a postdoc on the project "Trusted
-Quantum Software via a Formally Verified Functional Quantum
-Programming Language". </li>
+<h2>Recent Events</h2>
+
+<li> There are no events. </li>
 
 </body>
 <script>
