--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -1,20 +1,3 @@
-<head>
-<title>Misc </title>
-<!-- <base href="http://www.divms.uiowa.edu/~pfu/"> -->
-<!-- <link rev="made" href="mailto:pfu@divms.uiowa.edu"> -->
-<script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-  ga('create', 'UA-36515113-2', 'auto');
-  ga('send', 'pageview');
-
-</script>
-
-</head>
-
 <h1 id="notes" class="unnumbered">Notes</h1>
 <ul>
 <li><p>N001: Reducibility Method for Call-by-Value Simply Typed Lambda Calculus, March 2010. [<a href="../../document/notes/reducibility-stlc.pdf">pdf</a>]</p></li>
@@ -24,13 +7,15 @@
 <li><p>N005: A Novel Rewriting Approach to System F a la Curry, 2011. [<a href="../../document/notes/side-proj.pdf">pdf</a>]</p></li>
 <li><p>N006: A Study Note on Quantified Modal Logic, 2011. [<a href="../../document/notes/kripke-models.pdf">pdf</a>]</p></li>
 <li><p>N007: Confluence of Lambda Calculus Modulo Mu Equivalence. Nov 2012. [<a href="../../document/notes/conf-lambda-mu-I.pdf">pdf</a>]</p>
-<p><strong>Remarks</strong>: It turns out this note contain an error similar to the one pointed out in exercise 11.5.4 in the Barendregt-lambda-book. More specifically, the <span class="math"><em>t</em><sub>3</sub></span> in lemma 8 can not be found in some situation.</p></li>
+<p><strong>Remarks</strong>: It turns out this note contain an error similar to the one pointed out in exercise 11.5.4 in the Barendregt-lambda-book. More specifically, the <span class="math inline"><em>t</em><sub>3</sub></span> in lemma 8 can not be found in some situation.</p></li>
 <li><p>N008: Confluence for Local Lambda-Mu Calculus, July 2013. [<a href="../../document/notes/conf-lambda-mu-II.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This is the revised version to deal with the confluence problem arise in N007, the proof is inspired by the interpretation method.</p></li>
 <li><p>N009: Type Preservation for Curry Style F-omega, July 2013. [<a href="../../document/notes/fomega-presv.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega</p></li>
 <li><p>N010: Type Class and Logic Programming with Term Matching, Nov 2014. [<a href="../../document/notes/tm.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
+<li><p>N011: Realizability at work, June, 2017. [<a href="../../document/notes/spec.pdf">pdf</a>]</p>
+<p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
 </ul>
 <h1 id="articles" class="unnumbered">Articles</h1>
 <ul>
@@ -43,6 +28,7 @@
 <p>Peng Fu. Oct 2013.</p>
 <p><strong>Remarks</strong>: A Chapter from my dissertation.</p></li>
 <li><p>A004: Dependently-typed Programming with Scott Encoding. Peng Fu, Aaron Stump. 2013. [<a href="../../document/papers/scott-dep.pdf">pdf</a>]</p></li>
+<li><p>A005: Representing Nonterminating Reductions in F-mu-2. Peng Fu, 2016-2017. [<a href="../../document/papers/nonterm.pdf">pdf</a>]</p></li>
 </ul>
 <h1 id="academic-blog" class="unnumbered">Academic Blog</h1>
-<p>I try to maintain an academic blog here: <a href="https://steprow.wordpress.com/">https://steprow.wordpress.com/</a>.</p>
+<p>I try to maintain an academic blog here: <a href="https://steprow.wordpress.com/" class="uri">https://steprow.wordpress.com/</a>.</p>
