--- a/index.html
+++ b/index.html
@@ -25,10 +25,11 @@ My research interests are lambda calculus, type theory, interactive theorem prov
 <li> B.Eng. in Computer Science, Huazhong University of Science and Technology, 2009 </li> 
 
 <h2>Quick Links</h2>
+<li> <a href="./src/notes/notes.html">Notes and Articles</a> </li>
 <li> <a href="./src/publications/publications.html">Selected publications</a> </li>
 <li> <a href="./src/cv/cv.html">Curriculum Vitae</a> [<a href="./src/cv/cv.pdf">PDF</a>]  </li>
 <li> <a href="./src/talks/talks.html">Selected talks</a> </li>
-<li> <a href="./src/notes/notes.html">Misc</a> </li>
+
 <h2>Contact</h2>
 Email: peng-fu at uiowa.edu
 
