--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -14,7 +14,7 @@
 <p><strong>Remarks</strong>: This note straightforwardly extends the method(by Barendregt) of proving type preservation for Curry style system F (N004) to F-omega</p></li>
 <li><p>N010: Type Class and Logic Programming with Term Matching, Nov 2014. [<a href="../../document/notes/tm.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
-<li><p>N011: Realizability at work, June, 2017. [<a href="../../document/notes/spec.pdf">pdf</a>]</p>
+<li><p>N011: Realizability at work, June, 2017. [<a href="../../document/notes/realization.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
 </ul>
 <h1 id="articles" class="unnumbered">Articles</h1>
