--- a/src/notes/notes.html
+++ b/src/notes/notes.html
@@ -16,6 +16,8 @@
 <p><strong>Remarks</strong>: This note shows how one can have a notion of <em>logic programming</em> based solely on term matching.</p></li>
 <li><p>N011: Realizability at work, June, 2017. [<a href="../../document/notes/realization.pdf">pdf</a>]</p>
 <p><strong>Remarks</strong>: This notes shows examples of realization by termination and realization by shape index.</p></li>
+<li><p>N012: Shape Realization, August, 2017. [<a href="../../document/notes/shape-real.pdf">pdf</a>]</p>
+<p><strong>Remarks</strong>: This notes shows how to obtain a shape indexed version of a linear language.</p></li>
 </ul>
 <h1 id="articles" class="unnumbered">Articles</h1>
 <ul>
